<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tapp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="loading">Loading&#8230;</string>
    <string name="edit">Edit</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="no_internet">Internet connection is not available. Please try again later</string>
    <string name="no_records_available">No records available</string>
    <string name="invalid_server_response">Invalid response from server</string>
    <string name="out_of_memory">Application closed due to insufficient memory</string>
    <string name="invalid_parameter">Invalid parameter</string>

    <!-- Action menu -->
    <string name="action_settings">Settings</string>
    <string name="action_add_me">Add Me</string>
    <string name="action_my_credits">My Credits</string>
    <string name="action_search">Search</string>

    <!-- Login screen -->

    <string name="your_phone_number">Your Phone Number</string>
    <string name="confirm_country_code">Please confirm your country code and enter your phone number</string>
    <string name="go">GO</string>
    <string name="enter_phone">Please enter your phone number</string>
    <string name="number_confirmation">Number Confirmation</string>
    <string name="is_your_number"><![CDATA[<b>%s</b><br><br>Is your phone number above correct?]]></string>
    <string name="registration_failed">Registration failed</string>

    <!-- Buy screen -->
    <string name="buy">Buy</string>
    <string name="select_option">Please select and option</string>
    <string name="music">Music</string>
    <string name="games">Games</string>

    <!-- Friend List screen -->
    <string name="contacts">Contacts</string>
    <string name="no_contacts_available">No contacts available</string>
    <string name="invite">Invite</string>
    <string name="available">Available</string>
    <string name="invitation_message">Please download Tapp for android</string>
    <string name="invitation_sent">Invitation sent successfully</string>
    <string name="temp_json">[{\"phoneNo\":\"9898989898\",\"name\":\"John\",\"contactTypeFlag\":1,\"photoUrl\":\"http://blog.room34.com/wp-content/uploads/underdog/logo.thumbnail.png\",\"status\":\"Hello All\"},{\"phoneNo\":\"9999999999\",\"name\":\"David\",\"contactTypeFlag\":2,\"photoUrl\":\"http://www.iconshock.com/img_jpg/STROKE/communications/jpg/256/thumbnail_icon.jpg\",\"status\":\"Hi!\"},{\"phoneNo\":\"9988998899\",\"name\":\"Jonny\",\"contactTypeFlag\":1,\"photoUrl\":\"http://mariamontessori.com/mm/wp-content/uploads/2012/01/Connecting_to_Nature-thumbnail.jpg\",\"status\":\"Never say Never!\"}]</string>

    <!-- Profile screen -->
    <string name="profile">Profile</string>
    <string name="full_name">Full name:</string>
    <string name="email">Email:</string>
    <string name="birthday">Birthday:</string>
    <string name="sex">Sex:</string>
    <string name="age">Age:</string>
    <string name="webpage">Webpage:</string>
    <string name="city">City:</string>
    <string name="followers">Followers:</string>
    <string name="view_all">View All</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="no_followers_available">No followers available</string>

    <!-- Buy screen -->
    <string name="enter_credit_card">Enter Credit card</string>
    <string name="card_number">card number</string>
    <string name="name">Name</string>
    <string name="name_reg_with_card">Name as registered with your card issuer/Bank</string>
    <string name="select_payment_method">Please Select Your Payment Method</string>
    <string name="card_type">Card Type:</string>
    <string name="maestro">Maestro</string>
    <string name="visa">Visa</string>
    <string name="mastercard">Mastercard</string>
    <string name="card_expiry_date">Card Expiry Date*</string>
    <string name="cvv_number">3 Digit CVV Number*</string>
    <string name="pay">Pay</string>
    <string name="buy_error">Error while buying media</string>
    <string name="buy_success">Media brought successfully</string>

    <!-- MyCredits screen -->
    <string name="my_credits">My Credits</string>
    <string name="available_credits">Available Credits</string>
    <string name="load_more_bucks">Load more bucks in your account</string>
    <string name="activity_update_msg"><h3><b>My Activity</b></h3> updated after every 30 minutes</string>
    <string name="order_history">Order(s) History</string>
    <string name="place">Place</string>
    <string name="date">Date</string>
    <string name="price">Price</string>
    <string name="you_earned">You Earned</string>

    <!-- Music Tab screen -->
    <string name="search">Search</string>
    <string name="genres">Genres</string>
    <string name="artist">Artist</string>
    <string name="album">Album</string>
    <string name="songs">Songs</string>
    <string name="search_genres">Search Genres</string>
    <string name="search_artist">Search Artist</string>
    <string name="search_album">Search Album</string>
    <string name="search_song">Search Song</string>
    <string name="recommend">Recommend</string>
    <string name="select_album">Select Album</string>

    <!-- Game Tab screen -->

    <string name="all_games">All\nGames</string>
    <string name="new_games">New\nGames</string>
    <string name="popular_games">Popular\nGames</string>
    <string name="free_games">FREE\nGames</string>
    <string name="search_games">Search\nGames</string>

    <!-- Followers screen -->

    <string name="followers_title">Followers</string>

    <!-- Offer screen -->

    <string name="offers">Offers</string>
    <string name="recommended_by">Recommended by</string>
    <string name="offer_received">Offer Received:</string>
    <string name="offer_expire">Offer Expire:</string>
    <string name="retailer">Retailer:</string>

</resources>