<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margine_extra_large" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" >

        <Button
            android:id="@+id/btnArtist"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="@dimen/margine_very_large"
            android:text="@string/artist" />

        <Button
            android:id="@+id/btnAlbumb"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="@dimen/margine_very_large"
            android:layout_marginRight="@dimen/margine_very_large"
            android:layout_toRightOf="@+id/btnArtist"
            android:text="@string/album" />

        <Button
            android:id="@+id/btnGenres"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/btnArtist"
            android:layout_marginLeft="@dimen/margine_very_large"
            android:layout_marginTop="@dimen/margine_very_large"
            android:text="@string/genres" />

        <Button
            android:id="@+id/btnSongs"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/btnAlbumb"
            android:layout_marginBottom="@dimen/margine_very_large"
            android:layout_marginLeft="@dimen/margine_very_large"
            android:layout_marginTop="@dimen/margine_very_large"
            android:layout_toRightOf="@+id/btnGenres"
            android:text="@string/songs" />
    </RelativeLayout>

    <Button
        android:id="@+id/btnMusic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/relativeLayout1"
        android:layout_below="@+id/relativeLayout1"
        android:layout_marginTop="80dp"
        android:minWidth="100dp"
        android:text="@string/music" />

    <Button
        android:id="@+id/btnGames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/relativeLayout1"
        android:layout_below="@+id/relativeLayout1"
        android:layout_marginTop="80dp"
        android:minWidth="100dp"
        android:text="@string/games" />

</RelativeLayout>