<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margine_extra_large" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical" >

            <ImageView
                android:id="@+id/imvProfile"
                android:layout_width="@dimen/profile_image_size"
                android:layout_height="@dimen/profile_image_size"
                android:background="@android:color/darker_gray"
                android:src="@drawable/ic_launcher" />

            <EditText
                android:id="@+id/txtStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margine_large"
                android:maxLines="3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margine_large"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/full_name" />

            <EditText
                android:id="@+id/txtFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margine_small" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margine_small"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/email" />

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margine_small" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margine_small"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/birthday" />

            <EditText
                android:id="@+id/txtBirthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margine_small" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margine_small"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/sex" />

            <ToggleButton
                android:id="@+id/switchSex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margine_small"
                android:background="@drawable/tgl_male_female"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:textOff=""
                android:textOn="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margine_small"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/age" />

            <EditText
                android:id="@+id/txtAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margine_small" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margine_small"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/webpage" />

            <EditText
                android:id="@+id/txtWebpage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margine_small"
                android:autoLink="web" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margine_small"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/city" />

            <EditText
                android:id="@+id/txtCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margine_small" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnrFollowersCount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margine_small"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/followers" />

            <TextView
                android:id="@+id/txtFollowers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margine_normal"
                android:text="0" />

            <Button
                android:id="@+id/btnViewAllFollowers"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="0dp"
                android:text="@string/view_all" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>